Fix navbar bug and layout bug on user bookings page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -150,6 +150,7 @@ input {
     height: 100%;
     font-weight: 600;
     font-size: 18px;
+    color: #484848;
     // animation: scaleXBack 0.5s;
     // transform-origin: left;
 }
